--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
 <h1>Personal Website!</h1>
-<p>Look! My website is about to start</p>
+<p>Hi there! This is my homepage</p>
 </div>
