--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,10 +15,10 @@
             <%= link_to "About", about_path, class: "nav-link" %>
           </li>
           <li class="nav-item mx-2">
-            <%= link_to "Blog", posts_path(category: 'blog'), class: "nav-link" %>
+            <%= link_to "Blog", blog_path, class: "nav-link" %>
           </li>
           <li class="nav-item mx-2">
-            <%= link_to "Portfolio", posts_path(category: 'portfolio'), class: "nav-link" %>
+            <%= link_to "Portfolio", portfolio_path, class: "nav-link" %>
           </li>
           <li class="nav-item mx-2">
             <%= link_to "Contact", contact_path, class: "nav-link" %>
