--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,23 +1,30 @@
 <!-- app/views/posts/show.html.erb -->
-<div class="container">
-  <h1><%= @post.title %></h1>
+<div class="container" data-controller="post">
+  <div data-post-target="display">
+    <h1><%= @post.title %></h1>
+    <p>Posted by <%= @post.user.email %> on <%= @post.created_at.strftime("%B %d, %Y") %></p>
+    <p><%= link_to @post.link, @post.link %></p>
+    <p><%= @post.content %></p>
+    <p>Category: <%= @post.post_category.name %></p>
 
-  <p>Posted by <%= @post.user.email %> on <%= @post.created_at.strftime("%B %d, %Y") %></p>
+    <% if policy(@post).edit? %>
+      <%= link_to 'Edit', '#', data: { action: 'click->post#edit' } %>
+    <% end %>
 
-  <p><%= link_to @post.link, @post.link %></p>
+    <% if policy(@post).destroy? %>
+      <%= link_to 'Delete', @post, data:{turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+    <% end %>
+  </div>
 
-  <p><%= @post.content %></p>
-
-  <p>Category: <%= @post.post_category.name %></p>
-
-
-  <% if policy(@post).edit? %>
-    <%= link_to 'Edit', edit_post_path(@post) %>
-  <% end %>
-
-  <% if policy(@post).destroy? %>
-    <%= link_to 'Delete', @post, data:{turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
-  <% end %>
+  <div data-post-target="form" style="display: none;">
+    <%= simple_form_for(@post, remote: true) do |f| %>
+      <%= f.input :title, label: 'Title' %>
+      <%= f.input :content, label: 'Content' %>
+      <%= f.input :link, label: 'Link' %>
+      <%= f.association :post_category, label: 'Post Category', collection: PostCategory.all, prompt: 'Select a Category' %>
+      <%= f.button :submit, 'Update Post' %>
+    <% end %>
+  </div>
 
   <h2>Comments</h2>
 
@@ -41,7 +48,7 @@
         <% end %>
       </div>
 
-      <div data-comment-target="form">
+      <div data-comment-target="form" style="display: none;">
         <%= simple_form_for([@post, comment], remote: true) do |f| %>
           <%= f.input :content, label: 'Edit Comment' %>
           <%= f.button :submit, 'Update Comment' %>
