--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,6 +30,9 @@
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Profile", user_path(current_user), class: "dropdown-item" %></li>
+                <% if current_user.email == 'victor@victorbarbosa.com' %>
+                  <li><%= link_to "New Post", new_post_path, class: "dropdown-item" %></li>
+                <% end %>
                 <li> <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %></li>
               </ul>
             </li>
