--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,6 +2,7 @@
   <%= f.input :title %>
   <%= f.input :content %>
   <%= f.input :link %>
+  <%= f.input :photos, as: :file, input_html: { multiple: true } %>
   <%= f.association :post_category, collection: PostCategory.all, prompt: 'Select a Category' %>
   <%= f.button :submit %>
 <% end %>
