--- a/app/views/posts/portfolio.html.erb
+++ b/app/views/posts/portfolio.html.erb
@@ -9,4 +9,5 @@
       <p><%= link_to 'Read more', post_path(post) %></p>
     </div>
   <% end %>
+<%== pagy_nav(@pagy) if @pagy.pages > 1 %>
 </div>
