--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,4 @@
 <div class="container">
-<h1>Here you will read all about Victor</h1>
+  <h1>Hi there!</h1>
+  <p>This is a nice transition, no? </p>
 </div>
