--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,90 @@
-<div class="container">
-<h1>Personal Website!</h1>
-<p>Hi there! This is my homepage</p>
+<%# hero section/intro of me %>
+<section>
+  <div class="container home-display">
+    <div class="home-info">
+      <h5>Web Developer | Startup Enthusiast | Business Expansion Strategist</h5>
+      <h2>Hi, I'm Victor!</h2>
+      <p>I’m a Web Developer and Business Strategist with a burning passion for technology and startups.</p>
+      <p>With my unique blend of technical expertise and business acumen, I help businesses unlock their potential and navigate the digital landscape.</p>
+      <p>Currently, I’m leveraging my skills as a freelancer, creating dynamic and responsive websites that drive business growth.</p>
+      <p>But my journey doesn’t stop here. I’m actively seeking new opportunities to apply my skills, learn, grow, and make a meaningful impact.</p>
+      <%= link_to "Check out my portfolio!", portfolio_path, class: "btn btn-info" %>
+    </div>
+    <div class="home-image">
+      <%= image_tag("victor.jpg", alt: "Victor Barbosa") %>
+    </div>
+  </div>
+  <div class="custom-shape-divider-bottom-1695774642">
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+        <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+        <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+    </svg>
+  </div>
+</section>
+
+<%# services/links to my stuff %>
+<section style="background-color: #EAE6E5;">
+  <div class="container home-links">
+    <h2>Explore and Connect</h2>
+    <p>
+      Dive into my portfolio to see the projects I’ve worked on and the skills I bring to the table.
+      Curious about my thoughts and insights? Check out my blog for my latest posts on web development, startups, and business strategy.
+      Interested in learning more about how I can help your business grow? Discover my services and let’s start a conversation about your needs.
+    </p>
+  </div>
+  <div class="container home-buttons">
+    <div class="home-portfolio">
+      <%= image_tag("portfolio.svg") %>
+      <%= link_to "Portfolio", portfolio_path, class:"btn btn-info" %>
+    </div>
+    <div class="home-blog">
+      <%= image_tag("blog.svg") %>
+      <%= link_to "Blog", blog_path, class:"btn btn-info" %>
+    </div>
+    <div class="home-servi">
+      <%= image_tag("services.svg") %>
+      <%= link_to "Services", contact_path, class:"btn btn-info" %>
+    </div>
+  </div>
+  <div class="custom-shape-divider-bottom-1695777348">
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+        <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+        <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+    </svg>
+  </div>
+</section>
+
+<%# Section about a brief story of myself %>
+<section style="background-color: #8f8073;">
+  <div class="container home-display">
+    <div class="home-image">
+      <%= image_tag("victor.jpg", alt: "Victor Barbosa") %>
+    </div>
+    <div class="home-story">
+      <h2>A bit of my story</h2>
+      <p>Through striking, colorful, and clear visual language my work captures the collective human experience and reveals its universality through personal narrative exploration. Through striking, colorful, and clear visual language my work captures the collective human experience and reveals its universality through personal narrative exploration. Through striking, colorful, and clear visual language my work captures the collective human experience and reveals its universality through personal narrative exploration.</p>
+      <%= link_to "Read more", about_path, class:"btn btn-info" %>
+    </div>
+  </div>
+  <div class="custom-shape-divider-bottom-1695777949">
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+        <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+        <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+    </svg>
 </div>
+</section>
+
+
+<%# Section about blog posts %>
+<section style="background-color: #5b9279;">
+  <div class="container home-blog-title">
+    <h1>New blog posts from me:</h1>
+    <%= link_to "Checkout all posts ->", blog_path %>
+  </div>
+  <div class="container home-blog-posts">
+  <h2>show posts here</h2>
+  </div>
+</section>
