--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,7 @@
             <%= link_to "Portfolio", portfolio_path, class: "nav-link" %>
           </li>
           <li class="nav-item mx-2">
-            <%= link_to "Contact", contact_path, class: "nav-link" %>
+            <%= link_to "Contact", new_contact_path, class: "nav-link" %>
           </li>
           <% if user_signed_in? %>
             <li class="nav-item dropdown mx-2">
