calendly integrated with success

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,6 +12,11 @@
   width: 40px;
 }
 
+.show {
+  background-color: black
+}
+
+
 @media (max-width: 991px) {
   .sidebar {
     backdrop-filter: blur(10px);
