--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <body>
   <%= render "shared/navbar" %>
   <%= render "shared/flashes" %>
+  <%= render "shared/calendly" %>
   <%= yield %>
   <%= render "shared/footer" %>
   </body>
