--- a/app/views/posts/blog.html.erb
+++ b/app/views/posts/blog.html.erb
@@ -1,12 +1,22 @@
 <div class="container">
   <h1>Blog</h1>
 
+  <h2>Tags</h2>
+  <ul>
+    <% Tag.all.each do |tag| %>
+      <li><%= tag.name %></li>
+    <% end %>
+  </ul>
+
   <% @posts.each do |post| %>
     <div class="post">
       <h2><%= link_to post.title, post_path(post) %></h2>
       <p><%= post.content %></p>
       <p><%= post.post_category.name %></p>
       <p><%= link_to 'Read more', post_path(post) %></p>
+      <% post.tags.each do |tag| %>
+        <%= tag.name %>
+      <% end %>
     </div>
   <% end %>
 
