--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,3 +10,6 @@ $gray: #0E0000;
 $light-gray: #F4F4F4;
 
 $emerald: #1A7F5F;
+$faded-green: #5b9279;
+$dark-brown: #8f8073;
+$light-brown: #eae6e5;
