--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,7 +26,7 @@
       <%= f.input :link, label: 'Link' %>
       <%= f.input :photos, as: :file, input_html: { multiple: true } %>
       <%= f.association :post_category, label: 'Post Category', collection: PostCategory.all, prompt: 'Select a Category' %>
-      <%= f.button :submit, 'Update Post' %>
+      <%= f.button :submit, 'Update Post', class:"btn btn-primary" %>
     <% end %>
   </div>
 
@@ -34,7 +34,7 @@
 
   <%= simple_form_for([@post, Comment.new]) do |f| %>
     <%= f.input :content, label: 'New Comment' %>
-    <%= f.button :submit %>
+    <%= f.button :submit, class:"btn btn-primary" %>
   <% end %>
 
   <% @post.comments.each do |comment| %>
