--- a/app/views/posts/blog.html.erb
+++ b/app/views/posts/blog.html.erb
@@ -7,7 +7,13 @@
           <div class="post-info">
             <h3><%= link_to post.title, post_path(post) %></h3>
             <p><%= post.content.truncate(250) %></p>
-            <p><%= link_to 'Read more', post_path(post) %></p>
+            <div class="post-data">
+              <i class="fa-solid fa-calendar"></i> • <%= post.created_at.strftime("%b %Y") %>
+              <i class="fa-solid fa-stopwatch"></i> • <%= post.content.reading_time :format => :approx %>
+              <% post.tags.each do |tag| %>
+                <%= link_to tag.name, tag_path(tag.name), class:"btn btn-info tag-button" %>
+              <% end %>
+            </div>
           </div>
           <div class="post-image">
               <% post.photos.each do |photo| %>
@@ -17,9 +23,7 @@
               <% end %>
           </div>
         </div>
-            <% post.tags.each do |tag| %>
-              <%= link_to tag.name, tag_path(tag.name), class:"btn btn-info" %>
-            <% end %>
+
       </div>
     <% end %>
     <%== pagy_nav(@pagy) if @pagy.pages > 1 %>
