--- a/app/views/posts/blog.html.erb
+++ b/app/views/posts/blog.html.erb
@@ -18,7 +18,7 @@
           <div class="post-image">
               <% post.photos.each do |photo| %>
                 <% if photo.present? %>
-                  <%= cl_image_tag photo.key, height: 134, width: 200, crop: :fill %>
+                  <%= link_to cl_image_tag(photo.key, height: 134, width: 200, crop: :fill), post_path(post) %>
                 <% end %>
               <% end %>
           </div>
