updates to about me page and styles

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,29 @@
 <div class="container">
-  <h1>Hi there!</h1>
-  <p>This is a nice transition, no? </p>
+  <h1>About me</h1>
+  <p>
+  Originally from Brazil, I've always had a passion for entrepreneurship and international business.
+  I graduated from Insper, one of the top business schools in Brazil,
+  and completed advanced studies at the London School of Economics, as well as Entrepreneurship and Venture Capital at UC Berkeley.
+  My experience in working in the USA opened my eyes to the world of startups and technology, and I developed a strong interest in this field.
+  </p>
+<p>
+I have always been fascinated by how technology can create amazing products and solutions that can make a positive impact on the world.
+That’s why I decided to learn how to code and become a full-stack web developer.
+I enjoy building websites and applications that are user-friendly, functional, and innovative.
+</p>
+<p>
+I have worked as a business analyst at Ambev, a large multinational company,
+where I developed my skills in connecting with people from different cultures,
+agility, understanding of technology, and creative problem-solving.
+</p>
+
+<p>
+I am currently using my skills in business analysis and strategy to complement
+my software development skills and deliver software that really fulfills my clients’ needs.
+</p>
+
+<p>
+I am motivated by facing tough challenges that require me to think of unexpected solutions.
+I love learning new things and improving my skills as a web developer.
+I am always eager to take on new projects and opportunities that can help me grow as a professional and as a person.</p>
 </div>
