--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -64,7 +64,7 @@
     </div>
     <div class="home-story">
       <h2>A bit of my story</h2>
-      <p>Through striking, colorful, and clear visual language my work captures the collective human experience and reveals its universality through personal narrative exploration. Through striking, colorful, and clear visual language my work captures the collective human experience and reveals its universality through personal narrative exploration. Through striking, colorful, and clear visual language my work captures the collective human experience and reveals its universality through personal narrative exploration.</p>
+      <p>Originally from Brazil, I've always had a passion for entrepreneurship and international business. I graduated from Insper, one of the top business schools in Brazil, and completed advanced studies at the London School of Economics, as well as Entrepreneurship and Venture Capital at UC Berkeley. My experience in working in the USA opened my eyes to the world of startups and technology, and I developed a strong interest in this field.</p>
       <%= link_to "Read more", about_path, class:"btn btn-info" %>
     </div>
   </div>
@@ -79,4 +79,4 @@
 
 
 <%# Section about blog posts %>
-<%# <%= render "shared/home_comments" %> 
+<%# <%= render "shared/home_comments" %>
