changes made to post content input

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,11 @@
 @import "components/index";
 @import "pages/index";
 
+// Post text formatting
+@import "trix";
+@import "actiontext";
+
+
 
 body {
   display: flex;
