--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,7 @@
     <div class="form-login">
       <%= simple_form_for(@post) do |f| %>
         <%= f.input :title %>
-        <%= f.input :content %>
+        <%= f.rich_text_area :content %>
         <%= f.input :link %>
         <%= f.input :photos, as: :file, input_html: { multiple: true } %>
         <%= f.association :post_category, collection: PostCategory.all, prompt: 'Select a Category' %>
