--- a/app/assets/stylesheets/pages/_blog.scss
+++ b/app/assets/stylesheets/pages/_blog.scss
@@ -27,9 +27,9 @@
   }
 }
 
-.posts::-webkit-scrollbar {
-  display: none;
-}
+// .posts::-webkit-scrollbar {
+//   display: none;
+// }
 
 
 .tags {
