--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,6 +5,7 @@
         <%= f.input :title %>
         <%= f.rich_text_area :content %>
         <%= f.input :link %>
+        <%= f.input :video_url %>
         <%= f.input :photos, as: :file, input_html: { multiple: true } %>
         <%= f.association :post_category, collection: PostCategory.all, prompt: 'Select a Category' %>
         <%= f.association :tags, as: :check_boxes %>
