more updates to style

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -60,7 +60,7 @@
 <section style="background-color: #8f8073;">
   <div class="container home-display">
     <div class="home-image">
-      <%= image_tag("victor.jpg", alt: "Victor Barbosa") %>
+      <%= image_tag("victor-2.png", alt: "Victor Barbosa") %>
     </div>
     <div class="home-story">
       <h2>A bit of my story</h2>
