more visual changes

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -5,6 +5,9 @@
           <h2>Let's connect!</h2>
           <p>If you have questions, want to work together, wish to know more about me and my work or just feel like chatting!</p>
           <p>Fill out the form or write to victor@victorbarbosa.com</p>
+          <div class="home-image">
+            <%= image_tag("victor-2.png", alt: "Victor Barbosa") %>
+          </div>
         </div>
         <div class="form-login">
           <%= simple_form_for @contact do |f| %>
