--- a/app/assets/stylesheets/pages/_blog.scss
+++ b/app/assets/stylesheets/pages/_blog.scss
@@ -7,7 +7,7 @@
 }
 
 .posts {
-  width: 70%;
+  width: 100%;
   overflow: auto;
   height: 100vh; /* Adjust this value as needed */
 }
@@ -43,9 +43,9 @@
 .post-data {
   display: flex;
   align-items: center;
-  a {
-    margin-left: 4px;
-  }
+  // a {
+  //   margin-left: 4px;
+  // }
 }
 
 .tag-button {
@@ -61,5 +61,8 @@
 
   .tags {
     position: static;
+    width: 100%;
+    margin-bottom: 48px;
+    margin-left: 0;
   }
 }
