--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -38,6 +38,12 @@
   width: 100%;
 }
 
+@media (max-width: 991px) {
+  .form-container {
+    flex-direction: column;
+  }
+}
+
 .name {
   display: flex;
   justify-content: space-between;
