--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -18,15 +18,18 @@
   <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
 <% end %>
 
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= form_for "Login",
-      url: omniauth_authorize_path(resource_name, provider),
-      method: :post,
-      data: { turbo: false } do |f| %>
-      <%= button_tag(type: 'submit', style: 'border: none;') do %>
-        <%= image_tag("btn_google_signin_light_normal_web.png", alt: "Login") %>
-      <% end %>
-    <% end %>
-  <% end %>
-<% end %>
+
+
+
+<%# <%- if devise_mapping.omniauthable? %>
+  <%# <%- resource_class.omniauth_providers.each do |provider| %>
+    <%# <%= form_for "Login", %>
+      <%# url: omniauth_authorize_path(resource_name, provider), %>
+      <%# method: :post, %>
+      <%# data: { turbo: false } do |f| %>
+      <%# <%= button_tag(type: 'submit', style: 'border: none;') do %>
+        <%# <%= image_tag("btn_google_signin_light_normal_web.png", alt: "Login") %>
+      <%# <% end %>
+    <%# <% end %>
+  <%# <% end %>
+<%# <% end %>
